--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2736,6 +2736,40 @@ footer {
     margin-bottom: 20px;
     margin-top: 40px; } }
 
+.page-template-page-about-our-board .donate-btn {
+  background-color: #F91E72;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 3;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  height: 2.3rem;
+  width: 2.3rem; }
+  @media screen and (min-width: 480px) {
+    .page-template-page-about-our-board .donate-btn {
+      height: 5rem;
+      width: 5rem; } }
+  .page-template-page-about-our-board .donate-btn a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 1rem; }
+    @media screen and (min-width: 480px) {
+      .page-template-page-about-our-board .donate-btn a {
+        font-size: 4rem; } }
+    .page-template-page-about-our-board .donate-btn a i {
+      font-weight: lighter;
+      padding: .5rem;
+      color: #000000; }
+      .page-template-page-about-our-board .donate-btn a i:hover {
+        color: #f5a623; }
+    .page-template-page-about-our-board .donate-btn a p {
+      display: none; }
+
 .page-template-page-about-our-board .entry-header {
   max-width: 480px;
   margin: 0 auto;
@@ -3146,6 +3180,40 @@ footer {
 
 #post-18 {
   margin: 0; }
+
+.page-template-page-join-us .donate-btn {
+  background-color: #F91E72;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 3;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  height: 2.3rem;
+  width: 2.3rem; }
+  @media screen and (min-width: 480px) {
+    .page-template-page-join-us .donate-btn {
+      height: 5rem;
+      width: 5rem; } }
+  .page-template-page-join-us .donate-btn a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 1rem; }
+    @media screen and (min-width: 480px) {
+      .page-template-page-join-us .donate-btn a {
+        font-size: 4rem; } }
+    .page-template-page-join-us .donate-btn a i {
+      font-weight: lighter;
+      padding: .5rem;
+      color: #000000; }
+      .page-template-page-join-us .donate-btn a i:hover {
+        color: #f5a623; }
+    .page-template-page-join-us .donate-btn a p {
+      display: none; }
 
 .page-template-page-join-us .entry-header {
   display: -ms-flexbox;
