--- a/themes/sgsc/sass/_about-our-team.scss
+++ b/themes/sgsc/sass/_about-our-team.scss
@@ -130,9 +130,18 @@ span.text {
 
 .page-template-page-about-our-team {
 
+  .entry-header {
+    img {
+      object-position: 45% 0%;
+    }
+  }
 
   .entry-content {
     column-count: 2;
+    P {
+      font-size: $font__body;
+      font-size: $font_d-sub-body;
+    }
   }
 
   .our-team-paragraph {
@@ -149,7 +158,7 @@ span.text {
   .member {
     display: flex;
     flex-direction: column;
-    flex-basis: 45%;
+    flex-basis: 47%;
   }
 
   .member-picture {
