--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2499,7 +2499,7 @@ footer {
   @media screen and (min-width: 480px) {
     .page-template-page-about .entry-header {
       max-width: 1024px;
-      height: 353px; } }
+      height: 356px; } }
   .page-template-page-about .entry-header img {
     width: 100%;
     height: 100%;
@@ -2515,7 +2515,7 @@ footer {
     -ms-flex-pack: center;
         justify-content: center;
     width: 100%;
-    padding: 34px 0;
+    padding: 45px 0;
     background: rgba(255, 255, 255, 0.81); }
 
 .page-template-page-about .entry-content a {
@@ -2692,8 +2692,13 @@ footer {
     color: white; }
 
 @media all and (min-width: 480px) {
+  .page-template-page-about-our-team .entry-header img {
+    object-position: 45% 0%; }
   .page-template-page-about-our-team .entry-content {
     column-count: 2; }
+    .page-template-page-about-our-team .entry-content P {
+      font-size: lato, novecentosanswide, sans-serif;
+      font-size: 18px; }
   .page-template-page-about-our-team .our-team-paragraph {
     font-size: 18px;
     line-height: 24px; }
@@ -2709,8 +2714,8 @@ footer {
     display: flex;
     -ms-flex-direction: column;
         flex-direction: column;
-    -ms-flex-preferred-size: 45%;
-        flex-basis: 45%; }
+    -ms-flex-preferred-size: 47%;
+        flex-basis: 47%; }
   .page-template-page-about-our-team .member-picture {
     height: 282px;
     width: 100%;
