creatd partner template

--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -79,3 +79,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "single";
 @import "404";
 @import "search";
+@import "about-partners";
