--- a/themes/sgsc/sass/_programs.scss
+++ b/themes/sgsc/sass/_programs.scss
@@ -69,23 +69,17 @@
   .program-link{
     @media screen and (min-width: 480px) {
       flex: 0 1 43%;
+      height: 10rem;
+      margin: 2rem 0;
     }
   }
 	li {
-    background: $orange;
-    width: 80%;
-    height: 6rem;
-    margin: 1rem;
-    border: 4px solid $orange;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;	
-    
     @media screen and (min-width: 480px) {
       width: initial;
-      height: 10rem;
-      margin: 2rem 0;
     }
 	}
 
@@ -93,23 +87,27 @@
     @media screen and (min-width: 480px){
     margin: 2rem 0;
     flex: 0 1 93%;
-    margin: 0;
     }
   }
-
-	li:hover {
+	a:hover {
 		border: 4px solid black;
 	}
 	a {
 		color: black;
     text-decoration: none;
     font-size: 1.4rem;
+    width: 80%;
+    height: 6rem;
+    margin: 1rem;
+    background: $orange;
+    border: 4px solid $orange;
+    display: flex;
+    justify-content: center;
     @media screen and (min-width: 480px) {
       font-size: 2.5rem;
     }
 	}
 }
-
 .donate-btn {
   background-color: $pink;
   position: absolute;
@@ -228,11 +226,7 @@
 }
 
 @media screen and (min-width: 480px) {
-  .page-template-page-programs .donate-btn {
-    height: 4.5rem;
-    width: 4.5rem;
-    font-size: 2.5rem;
-  }
+  .page-template-page-programs 
   .tax-program-type {
     .donate-btn {
       height: 4.5rem;
@@ -249,6 +243,7 @@
       justify-content: space-between;
       li {
         flex: 0 1 47%;
+
       }
     }
     .entry-header {
@@ -266,4 +261,10 @@
     }
   }
 }
-
+@media screen and (min-width:480px) {
+  .donate-btn {
+    height: 4.5rem;
+    width: 4.5rem;
+    font-size: 2.5rem;
+  }
+}
