--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2525,56 +2525,51 @@ footer {
 .page-template-page-about .about-links {
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -ms-flex-flow: column nowrap;
+      flex-flow: column nowrap;
   -ms-flex-pack: center;
       justify-content: center;
-  max-width: 1024px;
-  margin: auto; }
+  -ms-flex-align: center;
+      align-items: center;
+  text-align: center; }
   .page-template-page-about .about-links p {
-    background: #f5a623;
-    width: 277px;
-    height: 96px;
+    font-family: montserrat, merriweather, sans-serif;
+    margin: 1rem 0;
+    width: 18rem;
+    height: 6rem;
     border: 4px solid #f5a623;
-    text-align: center;
-    display: -ms-flexbox;
-    display: flex;
+    background: #f5a623;
     -ms-flex-pack: center;
         justify-content: center;
+    display: -ms-flexbox;
+    display: flex;
     -ms-flex-align: center;
-        align-items: center;
-    margin: 32px 0 0 0;
-    font-family: montserrat, merriweather, sans-serif;
+        align-items: center; }
+    .page-template-page-about .about-links p:hover {
+      border: 4px solid #000000; }
+  .page-template-page-about .about-links a {
+    padding: 1rem;
     font-size: 22px; }
 
-.page-template-page-about .about-links p:hover {
-  border: 4px solid #000000; }
-
 @media all and (min-width: 480px) {
+  .page-template-page-about .entry-content {
+    width: 1024px;
+    margin: auto;
+    margin-top: 1rem; }
   .page-template-page-about .about-links {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap; }
+    -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around; }
   .page-template-page-about .about-links p {
-    background: #f5a623;
-    width: 417px;
-    height: 150px;
-    border: 4px solid #f5a623;
-    text-align: center;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: center;
-        justify-content: center;
-    -ms-flex-align: center;
-        align-items: center;
-    margin: 63px 0 0 0; }
-    .page-template-page-about .about-links p:nth-child(even) {
-      margin-left: 63px;
-      margin-right: 31.5px; }
-    .page-template-page-about .about-links p:nth-child(odd) {
-      margin-right: 63px;
-      margin-left: 31.5px; } }
+    -ms-flex: 0 1 43%;
+        flex: 0 1 43%;
+    height: 10rem;
+    margin: 2rem 0;
+    font-size: 2.5rem; }
+  .page-template-page-about .about-links a {
+    padding: 3rem 3rem;
+    font-size: 2.5rem; } }
 
 .page-template-page-about-our-team .entry-header {
   max-width: 480px;
@@ -3008,13 +3003,10 @@ footer {
   @media screen and (min-width: 480px) {
     .program-list .program-link {
       -ms-flex: 0 1 43%;
-          flex: 0 1 43%; } }
+          flex: 0 1 43%;
+      height: 10rem;
+      margin: 2rem 0; } }
   .program-list li {
-    background: #f5a623;
-    width: 80%;
-    height: 6rem;
-    margin: 1rem;
-    border: 4px solid #f5a623;
     text-align: center;
     display: -ms-flexbox;
     display: flex;
@@ -3024,21 +3016,27 @@ footer {
         align-items: center; }
     @media screen and (min-width: 480px) {
       .program-list li {
-        width: initial;
-        height: 10rem;
-        margin: 2rem 0; } }
+        width: initial; } }
   @media screen and (min-width: 480px) {
     .program-list a:last-child {
       margin: 2rem 0;
       -ms-flex: 0 1 93%;
-          flex: 0 1 93%;
-      margin: 0; } }
-  .program-list li:hover {
+          flex: 0 1 93%; } }
+  .program-list a:hover {
     border: 4px solid black; }
   .program-list a {
     color: black;
     text-decoration: none;
-    font-size: 1.4rem; }
+    font-size: 1.4rem;
+    width: 80%;
+    height: 6rem;
+    margin: 1rem;
+    background: #f5a623;
+    border: 4px solid #f5a623;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+        justify-content: center; }
     @media screen and (min-width: 480px) {
       .program-list a {
         font-size: 2.5rem; } }
@@ -3151,36 +3149,46 @@ footer {
     color: white; }
 
 @media screen and (min-width: 480px) {
-  .page-template-page-programs .donate-btn {
+  .page-template-page-programs
+.tax-program-type .donate-btn {
     height: 4.5rem;
     width: 4.5rem;
     font-size: 2.5rem; }
-  .tax-program-type .donate-btn {
-    height: 4.5rem;
-    width: 4.5rem;
-    font-size: 2.5rem; }
-  .tax-program-type .content-area {
+  .page-template-page-programs
+.tax-program-type .content-area {
     width: 1024px;
     margin: auto; }
-  .tax-program-type .program-grid {
+  .page-template-page-programs
+.tax-program-type .program-grid {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -ms-flex-pack: justify;
         justify-content: space-between; }
-    .tax-program-type .program-grid li {
+    .page-template-page-programs
+.tax-program-type .program-grid li {
       -ms-flex: 0 1 47%;
           flex: 0 1 47%; }
-  .tax-program-type .entry-header {
+  .page-template-page-programs
+.tax-program-type .entry-header {
     height: 10rem; }
-  .tax-program-type .program-img {
+  .page-template-page-programs
+.tax-program-type .program-img {
     height: 17rem; }
-    .tax-program-type .program-img img {
+    .page-template-page-programs
+.tax-program-type .program-img img {
       height: 100%;
       width: auto; }
-  .tax-program-type .program-back-btn {
+  .page-template-page-programs
+.tax-program-type .program-back-btn {
     display: none; } }
+
+@media screen and (min-width: 480px) {
+  .donate-btn {
+    height: 4.5rem;
+    width: 4.5rem;
+    font-size: 2.5rem; } }
 
 #post-18 {
   margin: 0; }
@@ -4254,3 +4262,60 @@ footer {
 
 .search .m-button {
   display: inline-block; }
+
+.page-template-page-about-our-team .entry-header {
+  max-width: 480px;
+  margin: 0 auto;
+  height: 275px;
+  position: relative; }
+  @media screen and (min-width: 480px) {
+    .page-template-page-about-our-team .entry-header {
+      max-width: 1024px;
+      height: 375px; } }
+  .page-template-page-about-our-team .entry-header img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 65% 0%;
+    position: absolute; }
+
+.page-template-page-about-our-team .entry-title {
+  position: absolute;
+  bottom: 0px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  width: 100%;
+  height: 118px;
+  background: #f5a623;
+  margin-bottom: 0; }
+
+.page-template-page-about-our-team .entry-content p {
+  margin: 15px 22px;
+  text-indent: 15px; }
+
+.page-template-page-about-our-team .about-links {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: center;
+      justify-content: center; }
+  .page-template-page-about-our-team .about-links p {
+    background: #f5a623;
+    width: 277px;
+    height: 96px;
+    border: 4px solid #f5a623;
+    text-align: center;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center;
+    margin: 32px 0 0 0;
+    font-family: montserrat, merriweather, sans-serif;
+    font-size: 22px; }
