--- a/themes/sgsc/sass/_navigation.scss
+++ b/themes/sgsc/sass/_navigation.scss
@@ -209,7 +209,12 @@ a {
 		display: block;
 	}
 	.nav-menu {
-	display: initial;
+		display: initial;
+	}
+	.menu-item {
+		a:hover {
+			color: $orange;
+		}
 	}
 	#menu-mobile-menu {
 		display: none;
