--- a/themes/sgsc/sass/_about-partners.scss
+++ b/themes/sgsc/sass/_about-partners.scss
@@ -1,56 +1,95 @@
-.page-template-page-about-our-team {
+.page-template-page-about-partners {
 
-.entry-header {
-  max-width: 480px;
-  margin: 0 auto;
-  height: 275px;  
-  position: relative;
-  @media screen and (min-width: 480px) {
-    max-width: 1024px;
-    height: 375px; 
-  }
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: 65% 0%;
+    .entry-header {
+    max-width: 480px;
+    margin: 0 auto;
+    height: 275px;  
+    position: relative;
+        @media screen and (min-width: 480px) {
+            max-width: 1024px;
+            height: 375px; 
+        }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: 65% 0%;
+            position: absolute;
+        }
+    }
+
+    .entry-title {
     position: absolute;
-  }
-}
-
-.entry-title {
-  position: absolute;
-  bottom: 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 118px;
-  background: $orange;
-  margin-bottom: 0;
-}
-
-.entry-content p {
-  margin: 15px 22px;
-  text-indent: 15px;
-}
-
-.about-links {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  p {
-    background: $orange;
-    width: 277px;
-    height: 96px;
-    border: 4px solid $orange;
-    text-align: center;
+    bottom: 0px;
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin: 32px 0 0 0;
-    font-family: $font__header;
-    font-size: $font_m-h1;
-  }
-}
+    justify-content: center;
+    width: 100%;
+    height: 118px;
+    background: $orange;
+    margin-bottom: 0;
+    }
+
+    .entry-content p {
+    margin: 15px 22px;
+    text-indent: 15px;
+    }
+
+    .about-links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    p {
+        background: $orange;
+        width: 277px;
+        height: 96px;
+        border: 4px solid $orange;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 32px 0 0 0;
+        font-family: $font__header;
+        font-size: $font_m-h1;
+        }
+    }
+
+    .partners-title {
+        font-size: $font_m-h1;
+        font-family: $font__body;
+        margin: 0 22px;
+    }
+
+    .partner-companies {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 22px;
+    }    
+
+    .individual-partner, .partner-container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        flex-basis: 50%;
+        // justify-content: center;
+        // align-items: center;
+        margin: auto;
+    }
+
+    .partner-logo img {
+        min-width: auto;
+        height: auto;
+    }
+
+    .partner-name {
+        min-height: 42px;
+    }
+
+    .logo-container {
+        min-height: 112px;
+        width: auto;
+    }
 }
