update donate button on about & adjust hero position

--- a/themes/sgsc/sass/_about-child.scss
+++ b/themes/sgsc/sass/_about-child.scss
@@ -40,15 +40,12 @@
       width: 1024px;
       margin: auto;
     }
-    .donate-btn {
-      bottom: 0.4rem;
-    }
     .entry-title {
       height: 10rem;
-      bottom: -9.6rem;
+      bottom: -10rem;
     }
     .entry-header {
-      height: initial;
+      height: 22rem;
       img {
         height: 22rem;
         width: 100%;
@@ -63,7 +60,7 @@
         margin: 0;
       }
       ul {
-        font-size: 1.5rem;
+        font-size: 1.15rem;
       }
     }
   }
