--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -3190,9 +3190,9 @@ footer {
 
 @media screen and (min-width: 480px) {
   .donate-btn {
-    height: 4.5rem;
-    width: 4.5rem;
-    font-size: 2.5rem; }
+    height: 5rem;
+    width: 5rem;
+    font-size: 4rem; }
   .program-back-btn {
     display: none; } }
 
@@ -4400,13 +4400,11 @@ footer {
   .page-template-page-about-sub .site-content {
     width: 1024px;
     margin: auto; }
-  .page-template-page-about-sub .donate-btn {
-    bottom: 0.4rem; }
   .page-template-page-about-sub .entry-title {
     height: 10rem;
-    bottom: -9.6rem; }
+    bottom: -10rem; }
   .page-template-page-about-sub .entry-header {
-    height: initial; }
+    height: 22rem; }
     .page-template-page-about-sub .entry-header img {
       height: 22rem;
       width: 100%; }
@@ -4417,4 +4415,4 @@ footer {
     .page-template-page-about-sub .content-area h5 {
       margin: 0; }
     .page-template-page-about-sub .content-area ul {
-      font-size: 1.5rem; } }
+      font-size: 1.15rem; } }
