--- a/themes/sgsc/sass/_about-partners.scss
+++ b/themes/sgsc/sass/_about-partners.scss
@@ -35,6 +35,11 @@
     text-indent: 15px;
     }
 
+    .linkhighlight a {
+        color: #5C8EDC;
+        text-decoration: none;
+    }
+
     .about-links {
     display: flex;
     flex-wrap: wrap;
@@ -56,8 +61,8 @@
 
     .partners-title {
         font-size: $font_m-h1;
-        font-family: $font__body;
-        margin: 0 22px;
+        font-family: $font__header;
+        margin: 10px 22px;
     }
 
     .partner-companies {
@@ -74,8 +79,6 @@
         flex-direction: column;
         flex-wrap: wrap;
         flex-basis: 50%;
-        // justify-content: center;
-        // align-items: center;
         margin: auto;
     }
 
@@ -85,11 +88,72 @@
     }
 
     .partner-name {
-        min-height: 42px;
+        font-family: $font__body;
+        min-width: 112px;
+        height: 42px;
+        margin: 0 0 24px 0;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
     }
 
     .logo-container {
-        min-height: 112px;
-        width: auto;
+        height: 112px;
+        object-fit: scale-down;
+    }
+}
+
+.about-back-btn {
+    p {
+      border: solid 2px black;
+      width: 6rem;
+      height: 2rem;
+      margin-left: 1rem;
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      font-family: $font__header;
+      font-size: 1.1rem;
+      &:hover {
+        background-color: $orange;
+        border-color: $orange;
+      }
+    }
+    a {
+      color: black;
+      text-decoration: none;
+      &:visited {
+        color: black;
+      }
+      &:hover {
+        color: white;
+      }
+    }
+}
+
+@media all and (min-width: 480px) {
+
+.page-template-page-about-partners {
+
+        .entry-content p {
+            font-size: $font_d-sub-body;
+        }
+
+        .individual-partner, .partner-container {
+            flex-basis: 25%;
+        }
+     
+        .partner-name {
+            font-size: $font_m-h2;
+        }
+
+        .logo-container {
+            min-width: 165px;
+        }
+
+        .about-back-btn {
+            display: none;
+        }
     }
 }
