set fixed width for desktop

--- a/themes/sgsc/sass/_content.scss
+++ b/themes/sgsc/sass/_content.scss
@@ -2,6 +2,12 @@
 # Content
 --------------------------------------------------------------*/
 
+@media screen and (min-width: 480px) {
+	html {
+	min-width: 1024px;
+	}
+}
+
 /* Posts and pages */
 
 .sticky {
